# model-utilities

./: README.md  pyproject.toml
src/model_utilities/datasets/: __init__.py  imagenet_hdf5.py  imagenet_subsets_hdf5.py
src/model_utilities/models/: __init__.py  cifar_convnext.py  cifar_resnet.py  cifar_vgg.py
src/model_utilities/training/: callbacks.py  losses.py  modelfitting.py  schedule.py  utils.py
src/model_utilities/transforms/: _cifar_presets.py  cifar_presets.py  unnormalize.py
tests/model_utilities/training/: schedule_tests.py
tools/cifar/: README.md  generate_weight_enums.py  launch.sh  train.py  train_all.sh  train_all_convnext.sh  train_all_resnets.sh  train_all_vgg.sh
