[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "model-utilities"
dynamic = ["version"]
dependencies = [
    "setuptools~=75.8.0",
    "torch~=2.6.0",
    "torchbearer~=0.5.5",
    "numpy~=2.2.2",
    "pandas~=2.2.3",
]
requires-python = ">=3.11"
authors = [
  {name = "Jonathon Hare", email = "jsh2@soton.ac.uk"},
  {name = "Antonia Marcu", email = "a.marcu@soton.ac.uk"}
]
description = "Utility functions for model training, etc"
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/feature-importance/model-utilities"
Documentation = "https://github.com/feature-importance/model-utilities"
Repository = "https://github.com/feature-importance/model-utilities.git"
"Bug Tracker" = "https://github.com/feature-importance/model-utilities/issues"
